feat: 구매 수량 및 [구매한 로또 번호] 출력 기능 구현
- 발행한 로또 수량 및 번호를 출력한다. 로또 번호는 오름차순으로 정렬하여 보여준다.
- 1개의 로또를 발행할 때 중복되지 않는 6개의 숫자를 뽑는다.